# blog-generator

backend/: agents.py  db.sqlite3  main.py  pyproject.toml  req.txt  server.py
backend/config/: settings.py  urls.py  views.py
backend/content/: data.py  models.py  urls.py  views.py
backend/content/migrations/: 0001_initial.py
backend/users/: authentication.py  models.py  models1.py  signin.py  tasks.py  urls.py
backend/users/migrations/: 0001_initial.py  0002_post1.py
content/: tests.py
frontend/front/: package-lock.json  package.json
frontend/front/app/: fir.tsx  layout.tsx  page.tsx
frontend/front/app/blog/: page.tsx
frontend/front/app/contextprovider/: provider.tsx
frontend/front/app/history/: page.tsx
frontend/front/app/history/[id]/: page.tsx
frontend/front/app/home/: page.tsx
frontend/front/app/logiin/: page.tsx
frontend/front/app/navbar/: logout.jsx  page.tsx
frontend/front/app/signin/: page.tsx
frontend/front/app/test/: page.tsx
frontend/front/app/wraper/: navWrapper.tsx
